--- a/index.css
+++ b/index.css
@@ -1,16 +1,55 @@
 .greetings,
 .form {
   display: none;
+  width: 50%;
+  margin: auto;
 }
 
-.showing {
-  display: block;
-}
-
-.js-clock {
+.js-toDoForm {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.js-form > input,
+.js-toDoForm > input {
+  border: none;
+  border-bottom: 1px solid white;
+  background: transparent;
+  font-size: 25px;
+}
+
+input::placeholder {
+  color: white;
+}
+
+.showing {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-size: 40px;
+  font-weight: 900;
+}
+
+.js-clock {
+  margin-top: 200px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 3em;
+  opacity: 1;
+  color: whitesmoke;
+}
+
+.js-toDoList {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-size: 25px;
+  font-weight: 900;
 }
 
 @keyframes fadeIn {
@@ -29,5 +68,14 @@
   width: 100%;
   height: 100%;
   z-index: -1;
-  animation: fadeIn 0.5s ease-in-out;
+  animation: fadeIn 0.8s ease-in-out;
+}
+
+.js-weather {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-size: 25px;
+  font-weight: 900;
 }
